Fixed z-index issues with workmap where things werent clickable

--- a/src/styles/Workmap.module.scss
+++ b/src/styles/Workmap.module.scss
@@ -17,6 +17,8 @@
     }
 
     .workmapAddIcon {
+      position: relative;
+      z-index: 1;
       margin-top: 7.5px;
       margin-left: 10px;
       width: 40px;
