--- a/src/styles/WorkmapItem.module.scss
+++ b/src/styles/WorkmapItem.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  z-index: 1;
+  z-index: 3;
 
   .itemHeader {
     display: flex;
